# neuromodes

./: .gitignore  README.rst  is_mg_right.ipynb  pilot_fem_solver.ipynb  pilot_vol_eigensolver.ipynb  pilot_vol_heteromodes.ipynb  pilot_vol_mesh.ipynb  pyproject.toml
TEMP_investigations/: align_spaces.ipynb  check_mouse_vol.ipynb  inpainting.ipynb  pilot_vol_mesh.ipynb  recon_maps.ipynb  shrimpocampus.ipynb
docs/: conf.py  modules.rst  requirements.txt  tutorials.rst
docs/_static/: custom.css
docs/tutorials/: GEM.ipynb  calc_modes.ipynb  eigenstrapping.ipynb  recon_maps.ipynb  wave_model.ipynb
docs/validation/: distances_lapy_vs_euc.ipynb  distances_lapy_vs_splu.ipynb  distances_vs_empirical.ipynb  distances_vs_lapy_correctness.ipynb  distances_vs_lapy_speed.ipynb  mesh-estimate_fwhm-evals.ipynb  nulls_eigenstrap_orig.ipynb  nulls_eigenstrap_speed.ipynb  nulls_eigenstrap_sphere.ipynb
neuromodes/: TEMP_utils.py  __init__.py  basis.py  basis.pyi  connectome.py  distances.py  eigen.py  eigen.pyi  io.py  mbm2.py  mesh.py  network.py  nulls.py  stats.py  waves.py
neuromodes/data/: included_data.csv  sp-human_tpl-fsLR_den-32k_hemi-L_fcgradient1.func.gii  sp-human_tpl-fsLR_den-32k_hemi-L_medmask.label.gii  sp-human_tpl-fsLR_den-32k_hemi-L_midthickness.surf.gii  sp-human_tpl-fsLR_den-32k_hemi-L_myelinmap.func.gii  sp-human_tpl-fsLR_den-32k_hemi-L_ndi.func.gii  sp-human_tpl-fsLR_den-32k_hemi-L_odi.func.gii  sp-human_tpl-fsLR_den-32k_hemi-L_thickness.func.gii  sp-human_tpl-fsLR_den-32k_hemi-R_medmask.label.gii  sp-human_tpl-fsLR_den-32k_hemi-R_midthickness.surf.gii  sp-human_tpl-fsLR_den-4k_hemi-L_midthickness.surf.gii  sp-human_tpl-fsLR_den-4k_hemi-L_myelinmap.func.gii  sp-human_tpl-fsLR_den-4k_hemi-R_medmask.label.gii  sp-human_tpl-fsLR_den-4k_hemi-R_midthickness.surf.gii  sp-human_tpl-fsLR_den-4k_hemi-R_myelinmap.func.gii  sp-macaque_tpl-fsLR_den-32k_hemi-L_medmask.label.gii  sp-marmoset_tpl-fsLR_den-32k_hemi-L_midthickness.surf.gii  sp-marmoset_tpl-fsLR_den-32k_hemi-R_medmask.label.gii  sp-marmoset_tpl-fsLR_den-32k_hemi-R_midthickness.surf.gii  sp-mouse_tpl-AMBA_res-200um_hemi-L_315.tetra.vtk  sp-mouse_tpl-AMBA_res-200um_hemi-R_315.tetra.vtk
neuromodes/mbm/: fdr.py  mbm.py  palm.py
tests/: test_basis.py  test_connectome.py  test_eigen.py  test_io.py  test_mesh.py  test_nulls.py  test_nulls_psd_correctness.py  test_nulls_seeding.py  test_nulls_speed.py  test_stats.py  test_waves.py
tests/test_data/: mesh_estimate_fwhm_results.csv  sp-human_tpl-fsLR_den-4k_hemi-L_midthickness-emodes.npy  sp-human_tpl-fsLR_den-4k_hemi-L_midthickness-evals.npy  sp-human_tpl-fsLR_den-4k_hemi-L_midthickness_eigenstrap-nulls-orig_scipy=1.15.3.npy  sp-human_tpl-fsLR_den-4k_hemi-L_midthickness_eigenstrap-nulls-orig_scipy=1.16.0.npy
