[project]
name = "neuromodes"
version = "0.1.0"
description = "Eigenmode-based brain mapping and modelling toolbox developed by the Neural Systems and Behaviour Lab"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["python", "modelling", "neuroimaging", "eigenmodes", "brain-mapping"]

dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "nibabel>=5.2.1",
    "lapy @ git+https://github.com/Deep-MI/LaPy.git@main",
    "trimesh>=4.8.1",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.4.2",
]
tutorials = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "nsbutils @ git+https://github.com/NSBLab/nsbutils.git@dev",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuromodes", "neuromodes.data"]

[tool.setuptools.package-data]
"neuromodes.data" = ["*"]

[tool.pytest.ini_options]
python_functions = ["test_"]
python_files = ["test_*.py",]
testpaths = ["tests",]

[project.urls]
"Homepage" = "https://neuromodes.readthedocs.io"
